# taurus

./: index.html  package.json
src/: App.scss  App.tsx  global.d.ts  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  command.rs  main.rs  model.rs  retry.rs  tau_err.rs  user_agent.rs
src/app/interface/: IFileInfo.ts  IListFile.ts
src/app/model/: fileInfo.ts  listFile.ts
src/app/util/: bytesFormat.ts  constant.ts  customStorage.ts  mantineTheme.ts
src/components/TFooter/: TFooter.scss  TFooter.tsx
src/components/THeader/: THeader.scss  THeader.tsx
src/components/TListInfo/: TList.scss  TList.tsx
src/components/TModal/: TModal.tsx
src/views/: App.scss  App.tsx
